--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,8 @@
 @import "./utils/normalize";
 @import "./utils/container";
 @import "./utils/variables";
-
+@import "./utils/placeholder";
+@import "./utils/mixin";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/benefits";
