--- a/sass/components/_benefits.scss
+++ b/sass/components/_benefits.scss
@@ -19,6 +19,14 @@
     margin-bottom: 18px;
   }
 
+  &__subtitle:nth-child(1) {
+    @include globalBorder(2px, solid, red);
+  }
+
+  &__subtitle:nth-child(2) {
+    @include globalBorder(2px, dashed, blue);
+  }
+
   &__text {
     width: 490px;
     line-height: calc(22 / 14);
@@ -70,9 +78,7 @@
       }
 
       .benefits-list__icon--wrapp {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @extend %flex;
         width: 74px;
         height: 74px;
 
@@ -83,9 +89,7 @@
 
     &:nth-child(3) {
       .benefits-list__icon--wrapp {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @extend %flex;
         width: 74px;
         height: 74px;
 
@@ -96,9 +100,7 @@
 
     &:last-child {
       .benefits-list__icon--wrapp {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @extend %flex;
         width: 74px;
         height: 74px;
 
